--- a/m4/Makefile.am
+++ b/m4/Makefile.am
@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-# Copyright (C) 2002 Simon Josefsson.
+# Copyright (C) 2002, 2003 Simon Josefsson.
 #
 # This file is part of GNU SASL.
 #
@@ -17,4 +17,8 @@
 # License along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA
 
-EXTRA_DIST = codeset.m4 gettext.m4 glibc21.m4 iconv.m4 intdiv0.m4 inttypes.m4 inttypes_h.m4 inttypes-pri.m4 isc-posix.m4 lcmessage.m4 lib-ld.m4 lib-link.m4 lib-prefix.m4 progtest.m4 stdint_h.m4 uintmax_t.m4 ulonglong.m4 libgcrypt.m4
+EXTRA_DIST = codeset.m4 gettext.m4 glibc21.m4 iconv.m4 intdiv0.m4	\
+	inttypes.m4 inttypes_h.m4 inttypes-pri.m4 isc-posix.m4		\
+	lcmessage.m4 lib-ld.m4 lib-link.m4 lib-prefix.m4 progtest.m4	\
+	stdint_h.m4 uintmax_t.m4 ulonglong.m4 libgcrypt.m4 nls.m4	\
+	po.m4 pkg.m4 libgcrypt.m4
