--- a/configure.ac
+++ b/configure.ac
@@ -125,12 +125,17 @@ AC_MSG_RESULT($ntlm)
 
 # Libgcrypt
 AM_PATH_LIBGCRYPT(1.1.7, [have_gcrypt=yes], [have_gcrypt=no])
-save_LIBS=$LIBS
-LIBS="$LIBS $LIBGCRYPT_LIBS"
-# libgcrypt in CVS has a very different API that we don't support,
-# and it defines this function.
-AC_CHECK_FUNC(gcry_md_is_secure, [have_gcrypt=no])
-LIBS=$save_LIBS
+if test "$have_gcrypt" = "yes"; then
+  save_LIBS=$LIBS
+  LIBS="$LIBS $LIBGCRYPT_LIBS"
+  # libgcrypt in CVS has a very different API that we don't support,
+  # and it defines this function.
+  AC_CHECK_FUNC(gcry_md_is_secure, [have_gcrypt=no])
+  LIBS=$save_LIBS
+  if test "$have_gcrypt" = "no"; then
+    AC_MSG_WARN([[Too recent libgcrypt found, not using it]])
+  fi
+fi
 
 # CRAM-MD5
 AC_ARG_ENABLE(cram-md5,
