--- a/gl/Makefile.am
+++ b/gl/Makefile.am
@@ -62,3 +62,9 @@ libfoo_a_SOURCES += xalloc.h xmalloc.c xstrdup.c
 libfoo_a_SOURCES += strchrnul.h
 
 libfoo_a_SOURCES += mempcpy.h
+
+libfoo_a_SOURCES += exitfail.h exitfail.c
+
+libfoo_a_SOURCES += printf-args.h printf-parse.h vasnprintf.h
+
+libfoo_a_SOURCES += vasprintf.h
