--- a/gl/m4/Makefile.am
+++ b/gl/m4/Makefile.am
@@ -5,12 +5,14 @@ EXTRA_DIST += alloca.m4
 EXTRA_DIST += argp.m4
 EXTRA_DIST += codeset.m4
 EXTRA_DIST += error.m4
+EXTRA_DIST += exitfail.m4
 EXTRA_DIST += gethostname.m4
 EXTRA_DIST += getopt.m4
 EXTRA_DIST += gettext.m4
 EXTRA_DIST += glibc21.m4
 EXTRA_DIST += iconv.m4
 EXTRA_DIST += intdiv0.m4
+EXTRA_DIST += intmax_t.m4
 EXTRA_DIST += inttypes_h.m4
 EXTRA_DIST += inttypes.m4
 EXTRA_DIST += inttypes-pri.m4
@@ -19,24 +21,31 @@ EXTRA_DIST += lcmessage.m4
 EXTRA_DIST += lib-ld.m4
 EXTRA_DIST += lib-link.m4
 EXTRA_DIST += lib-prefix.m4
+EXTRA_DIST += longdouble.m4
+EXTRA_DIST += longlong.m4
 EXTRA_DIST += malloc.m4
 EXTRA_DIST += memmove.m4
+EXTRA_DIST += mempcpy.m4
 EXTRA_DIST += memset.m4
 EXTRA_DIST += nls.m4
 EXTRA_DIST += onceonly_2_57.m4
 EXTRA_DIST += po.m4
 EXTRA_DIST += progtest.m4
 EXTRA_DIST += realloc.m4
+EXTRA_DIST += signed.m4
 EXTRA_DIST += stdint_h.m4
 EXTRA_DIST += strchrnul.m4
 EXTRA_DIST += strdup.m4
 EXTRA_DIST += strerror.m4
 EXTRA_DIST += strerror_r.m4
+EXTRA_DIST += strndup.m4
+EXTRA_DIST += strnlen.m4
 EXTRA_DIST += sysexits.m4
 EXTRA_DIST += uintmax_t.m4
 EXTRA_DIST += ulonglong.m4
 EXTRA_DIST += unlocked-io.m4
+EXTRA_DIST += vasnprintf.m4
+EXTRA_DIST += vasprintf.m4
+EXTRA_DIST += wchar_t.m4
+EXTRA_DIST += wint_t.m4
 EXTRA_DIST += xalloc.m4
-EXTRA_DIST += mempcpy.m4
-EXTRA_DIST += strndup.m4
-EXTRA_DIST += strnlen.m4
