fix libidn paths.

--- a/configure.ac
+++ b/configure.ac
@@ -257,8 +257,8 @@ if test "$with_system_idn" = "no"; then
 	echo "*** Using copy distributed with GNU SASL instead."
 	echo "*** See http://josefsson.org/libidn/ to get GNU Libidn."
 	AC_MSG_WARN([libidn not installed on system])
-	LIBIDN_CFLAGS="-I\$(top_srcdir)/libstringprep -I\$(top_builddir)/libstringprep"
-	LIBIDN_LIBS="\$(top_builddir)/libstringprep/libidn.la"
+	LIBIDN_CFLAGS="-I\$(top_srcdir)/libstringprep/lib -I\$(top_builddir)/libstringprep/lib"
+	LIBIDN_LIBS="\$(top_builddir)/libstringprep/lib/libidn.la"
 	LIBIDN=libstringprep
 fi
 AC_SUBST(LIBIDN)
