--- a/configure.ac
+++ b/configure.ac
@@ -48,6 +48,7 @@ AM_MISSING_PROG(DOCBOOK2HTML, docbook2html, $missing_dir)
 AM_MISSING_PROG(DOCBOOK2PS, docbook2ps, $missing_dir)
 AM_MISSING_PROG(DOCBOOK2PDF, docbook2pdf, $missing_dir)
 AC_GNU_SOURCE
+gl_USE_SYSTEM_EXTENSIONS
 AC_PROG_LIBTOOL
 AM_WITH_DMALLOC
 
@@ -306,27 +307,26 @@ AC_CHECK_DECLS(errno)
 AC_SEARCH_LIBS(gethostbyname, xnet)
 
 # For gnulib stuff in gl/.
-gl_FUNC_STRNLEN
-gl_FUNC_STRNDUP
-gl_FUNC_MEMPCPY
 gl_FUNC_ALLOCA
 gl_ARGP
 gl_ERROR
+gl_EXITFAIL
 gl_FUNC_GETHOSTNAME
 gl_GETOPT
 jm_FUNC_MALLOC
 gl_FUNC_MEMMOVE
+gl_FUNC_MEMPCPY
 gl_FUNC_MEMSET
 jm_FUNC_REALLOC
 gl_FUNC_STRCHRNUL
 gl_FUNC_STRDUP
-gl_FUNC_STRERROR
+gl_FUNC_STRNDUP
+gl_FUNC_STRNLEN
 gl_SYSEXITS
 jm_FUNC_GLIBC_UNLOCKED_IO
-gl_XALLOC
-gl_EXITFAIL
 gl_FUNC_VASNPRINTF
 gl_FUNC_VASPRINTF
+gl_XALLOC
 
 # Check for gtk-doc.
 AC_ARG_WITH(html-dir, [  --with-html-dir=PATH path to installed docs ])
