--- a/gl/m4/Makefile.am
+++ b/gl/m4/Makefile.am
@@ -6,6 +6,7 @@ EXTRA_DIST += argp.m4
 EXTRA_DIST += codeset.m4
 EXTRA_DIST += error.m4
 EXTRA_DIST += exitfail.m4
+EXTRA_DIST += extensions.m4
 EXTRA_DIST += gethostname.m4
 EXTRA_DIST += getopt.m4
 EXTRA_DIST += gettext.m4
@@ -13,9 +14,9 @@ EXTRA_DIST += glibc21.m4
 EXTRA_DIST += iconv.m4
 EXTRA_DIST += intdiv0.m4
 EXTRA_DIST += intmax_t.m4
-EXTRA_DIST += inttypes_h.m4
-EXTRA_DIST += inttypes.m4
 EXTRA_DIST += inttypes-pri.m4
+EXTRA_DIST += inttypes.m4
+EXTRA_DIST += inttypes_h.m4
 EXTRA_DIST += isc-posix.m4
 EXTRA_DIST += lcmessage.m4
 EXTRA_DIST += lib-ld.m4
@@ -36,7 +37,6 @@ EXTRA_DIST += signed.m4
 EXTRA_DIST += stdint_h.m4
 EXTRA_DIST += strchrnul.m4
 EXTRA_DIST += strdup.m4
-EXTRA_DIST += strerror.m4
 EXTRA_DIST += strerror_r.m4
 EXTRA_DIST += strndup.m4
 EXTRA_DIST += strnlen.m4
