Remove -I../intl. Fix LIBADD for libfoo.la.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -20,7 +20,7 @@
 
 lib_LTLIBRARIES = libgsasl.la
 
-INCLUDES = -I../intl -I$(top_srcdir)/gl \
+INCLUDES = -I$(top_srcdir)/gl \
 	@LIBNTLM_CFLAGS@ @LIBGCRYPT_CFLAGS@ @GSSAPI_CFLAGS@ \
 	@SHISHI_CFLAGS@ @LIBIDN_CFLAGS@ @GSS_CFLAGS@
 
@@ -42,9 +42,9 @@ libgsasl_la_SOURCES = init.c done.c error.c version.c callback.c \
 			securid.h securid.c \
 			kerberos_v5.h kerberos_v5.c
 
-libgsasl_la_LIBADD = @LTLIBINTL@ @LIBGCRYPT_LIBS@ @LIBNTLM_LIBS@ \
-	@GSSAPI_LIBS@ @GSS_LIBS@ @SHISHI_LIBS@ @LIBIDN_LIBS@ \
-	-L../gl -lfoo
+libgsasl_la_LIBADD = ../gl/libfoo.la \
+	@LTLIBINTL@ @LIBGCRYPT_LIBS@ @LIBNTLM_LIBS@ \
+	@GSSAPI_LIBS@ @GSS_LIBS@ @SHISHI_LIBS@ @LIBIDN_LIBS@
 libgsasl_la_LDFLAGS = -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE)
 
 localedir = $(datadir)/locale
