--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -18,12 +18,12 @@
 # the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
 # Boston, MA 02111-1307, USA.
 
-INCLUDES = -I../lib -I../intl -I$(top_srcdir)/gl @LIBIDN_CFLAGS@
+INCLUDES = -I../lib -I$(top_srcdir)/gl @LIBIDN_CFLAGS@
 
 bin_PROGRAMS = gsasl
 
 gsasl_SOURCES = gsasl.c callbacks.h callbacks.c gettext.h internal.h
-gsasl_LDADD = ../lib/libgsasl.la @LIBIDN_LIBS@ -L../gl -lfoo
+gsasl_LDADD = ../lib/libgsasl.la @LIBIDN_LIBS@ ../gl/libfoo.la
 
 localedir = $(datadir)/locale
 
