Use gettext.h from GNULib.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -22,7 +22,7 @@ INCLUDES = -I../lib -I$(top_srcdir)/gl @LIBIDN_CFLAGS@
 
 bin_PROGRAMS = gsasl
 
-gsasl_SOURCES = gsasl.c callbacks.h callbacks.c gettext.h internal.h
+gsasl_SOURCES = gsasl.c callbacks.h callbacks.c internal.h
 gsasl_LDADD = ../lib/libgsasl.la @LIBIDN_LIBS@ ../gl/libfoo.la
 
 localedir = $(datadir)/locale
