Don't always build self tests.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-# Copyright (C) 2002 Simon Josefsson.
+# Copyright (C) 2002, 2003 Simon Josefsson.
 #
 # This file is part of GNU SASL.
 #
@@ -26,8 +26,6 @@ TESTS = $(tests)
 
 INCLUDES = -I$(top_srcdir)/lib
 LDADD = ../lib/libgsasl.la
-
-noinst_PROGRAMS = $(tests)
 
 indent:
 	indent $(SOURCES)
