--- a/gl/m4/Makefile.am
+++ b/gl/m4/Makefile.am
@@ -7,6 +7,8 @@ EXTRA_DIST += codeset.m4
 EXTRA_DIST += error.m4
 EXTRA_DIST += exitfail.m4
 EXTRA_DIST += extensions.m4
+EXTRA_DIST += getline.m4
+EXTRA_DIST += getndelim2.m4
 EXTRA_DIST += getopt.m4
 EXTRA_DIST += gettext.m4
 EXTRA_DIST += glibc21.m4
@@ -27,6 +29,7 @@ EXTRA_DIST += onceonly_2_57.m4
 EXTRA_DIST += po.m4
 EXTRA_DIST += progtest.m4
 EXTRA_DIST += realloc.m4
+EXTRA_DIST += ssize_t.m4
 EXTRA_DIST += stdint_h.m4
 EXTRA_DIST += strchrnul.m4
 EXTRA_DIST += strerror_r.m4
