Fix release target.

--- a/Makefile.am
+++ b/Makefile.am
@@ -56,10 +56,9 @@ release:
 	rm -f $(distdir).tar.gz.asc
 	gpg -a --sign --detach $(distdir).tar.gz
 	gpg --verify $(distdir).tar.gz.asc
-	scp $(distdir).tar.gz* gnuftp.gnu.org:~alpha/gnu/$(PACKAGE)/
+	cvs rtag $(tag) $(PACKAGE)
 	test -d $(htmldir) && cp -v doc/$(PACKAGE).{ps,pdf,html} $(htmldir)/
-	test -d $(htmldir)/reference && \
-		cp -v reference/*.html $(htmldir)/reference/
+	test -d $(htmldir)/reference/html && \
+		cp -v reference/html/*.{html,png} $(htmldir)/reference/
 	test -d $(htmldir) && cd $(htmldir) && cvs commit -m "Update." \
 		$(PACKAGE).{ps,pdf,html} reference/*.html
-	cvs rtag $(tag) $(PACKAGE)
