--- a/lib/gsasl.h.in
+++ b/lib/gsasl.h.in
@@ -56,7 +56,8 @@ extern "C"
     GSASL_FCLOSE_ERROR,
     GSASL_MALLOC_ERROR,
     GSASL_BASE64_ERROR,
-    GSASL_GCRYPT_ERROR,
+    GSASL_CRYPTO_ERROR,
+    GSASL_GCRYPT_ERROR = GSASL_CRYPTO_ERROR,
     GSASL_GSSAPI_RELEASE_BUFFER_ERROR,
     GSASL_GSSAPI_IMPORT_NAME_ERROR,
     GSASL_GSSAPI_INIT_SEC_CONTEXT_ERROR,
