--- a/Makefile.am
+++ b/Makefile.am
@@ -25,7 +25,9 @@ EXTRA_DIST = ANNOUNCE config.h.in config.rpath mkinstalldirs libgsasl.pc.in
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = libgsasl.pc
 
-SUBDIRS = m4 po gl lib src tests doc
+MOST_SUBDIRS = m4 po gl lib src tests doc
+DIST_SUBDIRS = crypto $(MOST_SUBDIRS)
+SUBDIRS = @CRYPTO@ $(MOST_SUBDIRS)
 
 ACLOCAL_AMFLAGS = -I m4 -I gl/m4
 
