--- a/Makefile.am
+++ b/Makefile.am
@@ -25,11 +25,13 @@ EXTRA_DIST = ANNOUNCE config.h.in config.rpath mkinstalldirs libgsasl.pc.in
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = libgsasl.pc
 
-SUBDIRS = m4 po gl lib src tests doc
+SUBDIRS = m4 po gl 
 
 if NETTLE
 SUBDIRS += crypto
 endif
+
+SUBDIRS += lib src tests doc
 
 ACLOCAL_AMFLAGS = -I m4 -I gl/m4
 
